2002-10-13  Vincent Untz  <vincent@vuntz.net>

	* *: s/membership@gnome.org/membership-committee@gnome.org/g
	* elections.html
	* ballot-summary-2001.html
	* board_of_directors-2001.html
	* election-2001.html
	* electionrules-2001.html: archives of 2001 elections
	* ballot-summary.html
	* electionrules.html
	* overview.html: first update for the 2002 elections
	
2002-09-24  Steve Fox <drfickle@k-lug.org>

	* index.html: Update the news
	* documentation.html: Add by-laws
	* bylaws.pdf: by-laws doc

2002-09-19  Glynn Foster  <glynn.foster@sun.com>

	* membership-form.php: Update mail address for new committee.

2002-09-01  Vincent Untz  <vincent@vuntz.net>

	* membership-form.php: made it strip the slashes before the quotes.

2002-08-31  Mike Newman  <mike@gtnorthern.demon.co.uk>

	* membership-policy.html: Fixed to reflect current renewal process.
	* membership-form.html: Made the URL in the mailout work :)
	* index.html: Update the news.

2002-08-19  Mike Newman  <mike@gtnorthern.demon.co.uk>

	* cgi-bin/membership-form-handler.cgi:
	* membership-form.html: OK, it works. Remove the old form and handler.

2002-08-18  Vincent Untz  <vincent@vuntz.net>

	* membership-form.php: added the new form (it checks if fields
	are correctly filled).
	* electionrules.html
	* index.html
	* membership-policy.html
	* membership.html : changed the links to the form.

2002-08-06  Glynn Foster  <glynn.foster@sun.com>

	* cgi-bin/membership-form-handler.cgi: Perl uses 'eq' not
	'=='.

2002-08-06  Glynn Foster  <glynn.foster@sun.com>
	
	* membership-form.html: Add some spacing.

2002-08-06  Glynn Foster  <glynn.foster@sun.com>

	* cgi-bin/membership-form-handler.cgi: Minor updates.

2002-08-06  Glynn Foster  <glynn.foster@sun.com>

	* cgi-bin/membership-form-handler.cgi: Add backend for new checkbox.
	* membership-form.html: Add a new checkbox for previous foundation
	member.

2002-07-17 Steve Fox <drfickle@uberh4x0r.org>

	* index.html
	* template.html
