@@ -10,7 +10,7 @@
      <td VALIGN=TOP NOSAVE>
       <center>
        <a href="http://www.gnome.org">
-       <img SRC="gnome.jpg" ALT="" height=250 width=198 border=0></a><img 
+       <img SRC="gnome.jpg" ALT="" border=0></a><img 
        SRC="text.png" ALT="The GNOME Foundation" height=198 width=354>
       </center>
      </td>
