@@ -1,3 +1,10 @@
+2002-10-23  Vincent Untz  <vincent@vuntz.net>
+
+	* gnome.jpg: new foot logo
+	* gnome2.jpg
+	* gnome.png: removed old logo
+	* *.html: removed height and width for the logo
+
 2002-10-13  Vincent Untz  <vincent@vuntz.net>
 
 	* *: s/membership@gnome.org/membership-committee@gnome.org/g
